[tool.poetry]
name = "git_changelog"
version = "0.1.0"
description = "A package to create changelogs for your git tracked projects."
authors = ["Ruslan Sergeev <mybox.sergeev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
