[tool.poetry]
name = "changelog_md"
version = "0.1.2"
description = "A package to create changelogs for your git tracked projects."
authors = ["Ruslan Sergeev <mybox.sergeev@gmail.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/RuslanSergeev/git_changelog"
repository = "https://github.com/RuslanSergeev/git_changelog"
keywords = ["markdown", "changelog", "cicd"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
